admin/k8s/ui/deployment-browserless.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browserless
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: browserless
  template:
    metadata:
      labels:
        app: browserless
    spec:
      containers:
        - name: browserless
          image: browserless/chrome:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
