admin/k8s/ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: 957690576967.dkr.ecr.eu-west-1.amazonaws.com/n8n-custom:3
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5678
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5678
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
      restartPolicy: Always
