admin/k8s/ui/service-browserless.yml
apiVersion: v1
kind: Service
metadata:
  name: browserless
  namespace: n8n
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: browserless
  type: ClusterIP
