admin/k8s/ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: n8n
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5678
      targetPort: 5678
  selector:
    app: ui
  type: ClusterIP
