admin/k8s/ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: n8n
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "builder.frontiersin.io"
      secretName: builder-letsencrypt-tls
  rules:
    - host: builder.frontiersin.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 5678
